--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -40,15 +40,7 @@
         </div>
     </div>
 
-    <div class="site-wrap">
-        <div class="site-mobile-menu site-navbar-target">
-            <div class="site-mobile-menu-header">
-                <div class="site-mobile-menu-close mt-3">
-                    <span class="icon-close2 js-menu-toggle"></span>
-                </div>
-            </div>
-            <div class="site-mobile-menu-body"></div>
-        </div>
+    
         <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
             <div class="container">
                 <div class="row ">
@@ -56,6 +48,32 @@
                     <div class="col-6 col-xl-2">
                         <h1 class="mb-0 site-logo"><a class="h2 mb-0"><strong>Projeto</strong>PET<span class="text-primary">.</span> </a></h1>
                     </div>
+                    <div class="col-6 col-xl-10">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#home-section">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about-section">Veterinários</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Adoção</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Serviços</a>
+                        </li>
+                    </ul></div>
+                    @*<div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#home-section" class="nav-link">Home</a></li>
+                            <li><a href="#about-section" class="nav-link">Sobre</a></li>
+                            <li><a href="#trainers-section" class="nav-link">Veterinários</a></li>
+                            <li><a href="#blog-section" class="nav-link">Amigos disponíveis</a></li>
+                            <li><a href="#services-section" class="nav-link">Serviços</a></li>
+                            <li><a href="#contact-section" class="nav-link">Contato</a></li>
+                        </ul>
+                    </div>*@
+                
                     @*<div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
