--- a/ProjetoPET/Views/Loja/Index.cshtml
+++ b/ProjetoPET/Views/Loja/Index.cshtml
@@ -7,11 +7,11 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="~/css/pao_com_geleia.css" rel="stylesheet" />
-<h2>Index</h2>
+<h2>Lojas</h2>
 
-<p>
-    <a asp-action="Create">Cadastrar nova Loja</a>
-</p>
+@*<p>
+        <a asp-action="Create">Cadastrar nova Loja</a>
+    </p>*@
 
 <div class="row">
     @foreach (var item in Model)
@@ -24,7 +24,6 @@
                 height: 100%;
             }
         </style>
-
         <div class="col-md-6 form-group ">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
@@ -34,16 +33,12 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Opções
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="dropdown-item">Edit</a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="dropdown-item">Details</a>
-                                    <a asp-action="Delete" asp-route-id="@item.Id" class="dropdowntem">Delete</a>
-                                </div>
+                                @*<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="dropdown-item">Edit</a>
+                                        <a asp-action="Details" asp-route-id="@item.Id" class="dropdown-item">Details</a>
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="dropdowntem">Delete</a>
+                                    </div>*@
                             </div>
-
                             <h3> @Html.DisplayFor(modelItem => item.NomeLoja)</h3>
                             <br />
                             <i class="fas fa-map-marker-alt">
