--- a/ProjetoPET/Views/Loja/MinhasLojas.cshtml
+++ b/ProjetoPET/Views/Loja/MinhasLojas.cshtml
@@ -9,6 +9,28 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+
+
+<div class="circular--portrait">
+    <img src="images/woman-portrait.png" />
+</div>
+
+<style>
+    .circular--portrait {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+
+        .circular--portrait img {
+            width: 100%;
+            height: auto;
+        }
+</style>
+
 <table class="table">
     <thead>
         <tr>
