ajuste de dados

--- a/ProjetoPET/Views/Shared/_Layout.cshtml
+++ b/ProjetoPET/Views/Shared/_Layout.cshtml
@@ -4,29 +4,46 @@
     <title>ProjetoPET &mdash; Fábrica de software</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+
+
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700, 900|Vollkorn:400i" rel="stylesheet">
-    <link rel="stylesheet" href="~/fonts/icomoon/style.css">
+    <link href="~/css/style.css" rel="stylesheet" />
+
+
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     @*<link rel="stylesheet" href="~/css/jquery-ui.css">*@
-    <link href="~/node_modules/jquery-ui/themes/base/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="~/css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="~/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="~/css/aos.css">
-    <link rel="stylesheet" href="~/css/style.css">
-    <script src="~/js/jquery-3.3.1.min.js"></script>
-    <script src="~/js/jquery-ui.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
-    <script src="~/js/owl.carousel.min.js"></script>
-    <script src="~/js/jquery.countdown.min.js"></script>
-    <script src="~/js/jquery.easing.1.3.js"></script>
-    <script src="~/js/aos.js"></script>
-    <script src="~/js/jquery.fancybox.min.js"></script>
-    <script src="~/js/jquery.sticky.js"></script>
-    <script src="~/js/isotope.pkgd.min.js"></script>
+    @*<link href="~/node_modules/jquery-ui/themes/base/all.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="~/css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="~/css/jquery.fancybox.min.css">
+        <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
+        <link rel="stylesheet" href="~/fonts/flaticon/font/flaticon.css">
+        <link rel="stylesheet" href="~/css/aos.css">
+        <link rel="stylesheet" href="~/css/style.css">*@
+    <link href="~/css/main.min.css" rel="stylesheet" />
+    <link href="~/css/vendor.min.css" rel="stylesheet" />
+
+    @*<script src="~/js/jquery-3.3.1.min.js"></script>
+        <script src="~/js/jquery-ui.js"></script>
+        <script src="~/js/popper.min.js"></script>
+        <script src="~/js/bootstrap.min.js"></script>
+        <script src="~/js/owl.carousel.min.js"></script>*@
+
+    @*<script src="~/js/jquery.countdown.min.js"></script>
+        <script src="~/js/jquery.easing.1.3.js"></script>
+        <script src="~/js/aos.js"></script>
+        <script src="~/js/jquery.fancybox.min.js"></script>
+        <script src="~/js/jquery.sticky.js"></script>
+        <script src="~/js/isotope.pkgd.min.js"></script>*@
+
+
+    <script src="~/scripts/vendor.min.js"></script>
+
+
+
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" id="home-section">
     <div id="overlayer"></div>
