ajuste de texto

--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -216,7 +216,7 @@
             <div class="col-lg-6 text-center heading-section mb-5">
 
                 <h2 class="text-black mb-2">Amigos disponíveis</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>Amigos disponíveis para um novo lar</p>
             </div>
         </div>
         <div class="row">
@@ -226,9 +226,16 @@
                         <a href="single.html"><img src="images/dog_5.jpg" alt="Image" class="img-fluid"></a>
                     </figure>
                     <div class="blog-entry-text">
-                        <h3><a href="single.html">How to make first aid for your dog when in the house</a></h3>
+                        <h3><a href="single.html">Bob</a></h3>
                         <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati, perspiciatis debitis. Cumque nihil, laborum eos possimus quod dolor.</p>
+                        <p>
+                            Nome: Bob
+                            Raca: Pug
+                            Idade: 3 anos
+                            Sexo: Macho
+                            Telefone: 9999-99
+                            Descricao: Dócil e ansioso por um novo lar.
+                        </p>
                         <p><a href="#" class="">Read More..</a></p>
                     </div>
                 </div>
@@ -239,39 +246,21 @@
                         <a href="single.html"><img src="images/dog_6.jpg" alt="Image" class="img-fluid"></a>
                     </figure>
                     <div class="blog-entry-text">
-                        <h3><a href="single.html">How to make first aid for your dog when in the house</a></h3>
+                        <h3><a href="single.html">Laila</a></h3>
                         <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quaerat beatae officiis, iure odio veritatis adipisci recusandae qui?</p>
+                        <p>
+                            Nome: Laila
+                            Raca: Shaw-Shaw
+                            Idade: 3 anos
+                            Sexo: Fêmea
+                            Telefone: 9999-99
+                            Descricao: Dócil e ansiosa por um novo lar.
+                        </p>
                         <p><a href="#" class="">Read More..</a></p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mb-4" data-aos="fade-up" data-aos-delay="">
-                <div class="d-lg-flex blog-entry">
-                    <figure class="mr-4">
-                        <a href="single.html"><img src="images/dog_6.jpg" alt="Image" class="img-fluid"></a>
-                    </figure>
-                    <div class="blog-entry-text">
-                        <h3><a href="single.html">How to make first aid for your dog when in the house</a></h3>
-                        <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsum illum harum odio iste et quae doloremque dicta.</p>
-                        <p><a href="#" class="">Read More..</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="d-lg-flex blog-entry">
-                    <figure class="mr-4">
-                        <a href="single.html"><img src="images/dog_5.jpg" alt="Image" class="img-fluid"></a>
-                    </figure>
-                    <div class="blog-entry-text">
-                        <h3><a href="single.html">How to make first aid for your dog when in the house</a></h3>
-                        <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam veritatis minima ut voluptates aspernatur blanditiis repudiandae, voluptatem impedit.</p>
-                        <p><a href="#" class="">Read More..</a></p>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </section>
@@ -290,52 +279,27 @@
 
                 <div class="block_service">
                     <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>Dog Checkup</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    <h3>Checkup de rotina</h3>
+                    <p>O checkup de rotina é indispensável na vida de seu bichinho desde que ele é um filhote.</p>
                 </div>
             </div>
             <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="block_service">
                     <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>Dog Dermatology</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    <h3>Dermatologia Veterinária</h3>
+                    <p>A dermatologia veterinária previne e auxilia no tratamento de doenças como (...)</p>
                 </div>
             </div>
             <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="block_service">
                     <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>For Strong Teeth</h3>
+                    <h3>Odontologia veterinária</h3>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
                 </div>
             </div>
-
-            <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="">
-
-                <div class="block_service">
-                    <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>Dog First Aid</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="block_service">
-                    <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>Dog Dryer</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="block_service">
-                    <span class="icon-paw d-block display-3 text-primary mb-3"></span>
-                    <h3>Expert Veterinarian</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-                </div>
-            </div>
-
         </div>
     </div>
 </section>
-
 
 <section class="bg-light" id="contact-section">
     <div class="container">
@@ -343,7 +307,7 @@
             <div class="col-lg-6">
                 <form action="#" class="p-5 contact-form">
 
-                    <h2 class="h4 mb-5 heading">Contact Form</h2>
+                    <h2 class="h4 mb-5 heading">Contato</h2>
                     <div class="row form-group">
                         <div class="col-md-6 mb-3 mb-md-0">
                             <label for="fname">Nome</label>
@@ -386,7 +350,7 @@
                 <div class="row justify-content-center align-items-center h-100">
                     <div class="col-lg-6 text-center heading-section mb-5 align-self-center">
 
-                        <h2 class=" mb-5 text-black">Contato</h2>
+                        <h2 class=" mb-5 text-black">Informações</h2>
                         <ul class="list-unstyled text-left address">
                             <li>
                                 <span class="d-block">Endereço:</span>
