--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 
 
 
-<section class="site-blocks-cover overflow-hidden bg-light">
-    <div class="container">
+<section class="site-blocks-cover overflow-hidden bg-light img-equipe">
+    <div class="container ">
         <div class="row">
             <div class="col-md-5 mr-auto align-self-center text-center text-md-left">
                 <div class="intro-text">
@@ -18,6 +18,7 @@
             <div class="col-md-5 align-self-center text-center text-md-right">
                 <img src="images/dog_1.jpg" alt="Image" class="img-fluid cover-img">
                 <img src="images/dog_2.jpg" alt="Image" class="img-fluid cover-img2">
+
             </div>
         </div>
     </div>
