--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -15,11 +15,11 @@
                     <p><a class="btn btn-primary" asp-area="" asp-controller="Evento" asp-action="Index">Fazer um tour</a></p>
                 </div>
             </div>
-            <div class="col-md-5 align-self-center text-center text-md-right">
+            @*<div class="col-md-5 align-self-center text-center text-md-right">
                 <img src="images/dog_1.jpg" alt="Image" class="img-fluid cover-img">
                 <img src="images/dog_2.jpg" alt="Image" class="img-fluid cover-img2">
 
-            </div>
+            </div>*@
         </div>
     </div>
 </section>
@@ -53,13 +53,14 @@
                 <div class="row">
                     <div class="mb-4 mb-lg-0 col-lg-6" data-aos="fade-right">
                         <a href="#" class="rotate-reverse10">
-                            <img src="images/dog_4.jpg" alt="Image" class="img-fluid">
+                            @*<img src="images/dog_4.jpg" alt="Image" class="img-fluid">*@
+                            <img src="~/images/equipe2.jpg" class="img-fluid"/>
                         </a>
                     </div>
                     <div class="col-lg-5 ml-auto align-self-center" data-aos="fade-left">
-                        <h2 class="text-black">Equipamentos modernos</h2>
-                        <p class="mb-4">Far far away, behind the word mountains, Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p><a href="#" class="btn btn-primary">Read More</a></p>
+                        <h2 class="text-black">Equipe</h2>
+                        <p class="mb-4">Construído por alunos da Fábrica de Software.</p>
+                        <p><a href="#" class="btn btn-primary">Leia Mais</a></p>
                     </div>
                 </div>
             </div>
